--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <div class="logo_header">
-                <img src="/assets/img/alicia logo grande.svg" alt="">
+                <img src="./assets/img/alicia logo grande.svg" alt="">
                 <span>Doces D'licia</span>
             </div>
             <div class="menu">
@@ -31,7 +31,7 @@
             </div>
         </nav>
         <div class="header_sobre">
-            <img src="/assets/header_fundo.png" alt="">
+            <img src="./assets/header_fundo.png" alt="">
             <h2></h2>
 
         </div>
