--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/css/styler.css">
-    <link rel="stylesheet" type="text/css" media="(max-width: 475px)" href="css/mobile475.css">
+    <link rel="stylesheet" href="./css/styler.css">
+    <link rel="stylesheet" type="text/css" media="(max-width: 475px)" href="./css/mobile475.css">
     <title>Doces D'licia</title>
 </head>
 <body>
     <header>
         <nav>
             <div class="logo_header">
-                <img src="/assets/img/alicia logo grande.svg" alt="">
+                <img src="./assets/img/alicia logo grande.svg" alt="">
                 <span>Doces D'licia</span>
             </div>
             <div class="menu">
@@ -32,7 +32,7 @@
             </div>
         </nav>
         <div class="header_sobre">
-            <img src="/assets/header_fundo.png" alt="">
+            <img src="./assets/header_fundo.png" alt="">
             <h2></h2>
 
         </div>
@@ -86,7 +86,7 @@
         </div>
         <div class="main_footer">
             <div class="logofinal">            
-                <img src="/assets/logo_footer.svg" alt="">
+                <img src="./assets/logo_footer.svg" alt="">
         </div>
             <ul>
                 <li><a href="#">Sobre nos</a></li>
